# ErgoDocente-Backend

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 001_20250101_000000_initial_schema.py
app/: main.py
app/core/: config.py  database.py  exceptions.py  logging_config.py  security.py
app/dependencies/: __init__.py
app/models/: __init__.py  archivos_media.py  base.py  categorias_ejercicios.py  consejos.py  contenidos_ergonomicos.py  dispositivos.py  ejercicios.py  ejercicios_rutina.py  emociones.py  enfermedades_ocupacionales.py  idiomas.py  mensajes_motivacionales.py  preferencias_usuario.py  progreso_usuario.py  recomendaciones_emocionales.py  recordatorios.py  registros_auditoria.py  registros_emocionales.py  rutinas_pausas_activas.py  traducciones.py  usuarios.py
app/repositories/: __init__.py  archivos_media_repository.py  base.py  categorias_ejercicios_repository.py  consejos_repository.py  contenidos_ergonomicos_repository.py  dispositivos_repository.py  ejercicios_repository.py  ejercicios_rutina_repository.py  emociones_repository.py  enfermedades_ocupacionales_repository.py  (+11 more)
seeders/: __init__.py  base_seeder.py  categorias_ejercicios_seeder.py  consejos_seeder.py  contenidos_ergonomicos_seeder.py  ejercicios_rutina_seeder.py  ejercicios_seeder.py  emociones_seeder.py  enfermedades_ocupacionales_seeder.py  idiomas_seeder.py  mensajes_motivacionales_seeder.py  recomendaciones_emocionales_seeder.py  run_seeders.py  rutinas_pausas_activas_seeder.py
(+64 files in other folders)
